corrected alignment on the popup

--- a/style.css
+++ b/style.css
@@ -889,9 +889,9 @@ textarea::placeholder {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 90%;
-  height: 90%;
-  padding: 60px 16px 0 16px;
+  width: 100%;
+  height: 100%;
+  padding-left: 0px;
   background: #c1c7d0;
   position: fixed;
   top: 0;
@@ -899,24 +899,25 @@ textarea::placeholder {
   right: 0;
   bottom: 0;
   mix-blend-mode: multiply;
-  backdrop-filter: blur(15px);
+  backdrop-filter: blur(15px); border: 2px solid green;
 }
+
 
 .pop-inner-show {
   display: block;
   overflow-y: auto;
-  position: fixed;
-  top: 0;
-  left: 0;
+  margin-left: 0;
+  padding: 16px;
   height: 90%;
-  width: 80%;
+  width: 90%;
   background: #fff;
   border: 1px solid #dfe1e6;
-  border-radius: 16px;
+  border-radius: 16px; border: 2px solid red;
 }
 
 .poparag {
   width: 100%;
+  height: 320px;
   font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -924,7 +925,7 @@ textarea::placeholder {
   line-height: 24px;
   color: #344563;
   flex-grow: 0;
-  margin-bottom: 4px;
+  margin-bottom: 4px; border: 2px solid;
 }
 
 .pop_btn {
@@ -944,7 +945,7 @@ textarea::placeholder {
   left: calc(50% - 343px / 2);
   top: 60px;
   background: #fff;
-  border: 1px solid #dfe1e6;
+ /* border: 1px solid #dfe1e6;*/border: 2px solid green;
   border-radius: 16px;
 }
 
